--- a/requirements.txt
+++ b/requirements.txt
@@ -83,8 +83,7 @@ streamlit==1.41.1
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-cpu==2.10.0
 termcolor==2.5.0
 tinycss2==1.4.0
 toml==0.10.2
